syntax = "proto3";

package go.micro.service.user;

service UserService {
    //用户注册
    rpc SignUp(ReqSignUp) returns (RespSignUp){}
    //用户登录
    rpc SignIn(ReqSignIn) returns (RespSignIn){}
    //获取用户信息
    rpc UserInfo(ReqUserInfo) returns (RespUserInfo){}
    //获取用户文件
    rpc UserFiles(ReqUserFile) returns (RespUserFile){}
    //获取用户文件
    rpc UserFileRename(ReqUserFileRename) returns (RespUserFileRename){}
}

message ReqSignUp {
    string userName = 1;
    string password = 2;
}

message RespSignUp{
    int32 code = 1;
    string message = 2;
}

message ReqSignIn{
    string userName = 1;
    string password = 2;
}

message RespSignIn{
    int32 code = 1;
    string username=2;
    string token = 3;
    string message = 4;
}

message ReqUserInfo{
    string userName=1;
}

message RespUserInfo{
    int32 code = 1;
    string message = 2;
    string userName=3;
    string email=4;  
    string phone=5;
    string signUpAt=6;
    string lastActiveAt=7;
    int32 status=8; 
}

message ReqUserFile{
    string userName = 1;
    int32 limit = 2;
}

message RespUserFile{
    int32 code =1;
    string message = 2;
    bytes fileData = 3;
}

message ReqUserFileRename{
    string userName=1;
    string fileHash=2;
    string newFileName=3;
}

message RespUserFileRename{
    int32 code = 1;
    string message = 2;
    bytes fileData=3;
}

